[gd_scene load_steps=6 format=2]

[ext_resource path="res://External Assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/HUD.gd" type="Script" id=2]
[ext_resource path="res://Scripts/Dialogue.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[node name="HUD" type="Node"]
script = ExtResource( 2 )

[node name="Start" type="Button" parent="."]
margin_left = 3.05176e-05
margin_top = 288.0
margin_right = 77.0004
margin_bottom = 324.0
custom_fonts/font = SubResource( 1 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndTurn" type="Button" parent="."]
margin_left = 432.0
margin_top = 32.0
margin_right = 566.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 1 )
text = "End Turn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RollDice" type="Button" parent="."]
margin_left = 3.05176e-05
margin_top = 232.0
margin_right = 178.0
margin_bottom = 268.0
custom_fonts/font = SubResource( 1 )
text = "Roll the Dice"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ToggleDialogue" type="Button" parent="."]
margin_left = 3.05176e-05
margin_top = 352.0
margin_right = 229.0
margin_bottom = 388.0
custom_fonts/font = SubResource( 1 )
text = "Toggle Dialogue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddMoney" type="Button" parent="."]
margin_top = 48.0
margin_right = 29.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtractMoney" type="Button" parent="."]
margin_left = 48.0
margin_top = 48.0
margin_right = 75.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubtractYear" type="Button" parent="."]
margin_left = 232.0
margin_top = 48.0
margin_right = 261.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AddYear" type="Button" parent="."]
margin_left = 184.0
margin_top = 48.0
margin_right = 213.0
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="."]
margin_right = 138.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Money: $0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Years" type="Label" parent="."]
margin_left = 176.0
margin_right = 284.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 1 )
text = "Years: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackupFormulations" type="Label" parent="."]
margin_top = 112.0
margin_right = 328.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 1 )
text = "Backup Formulations: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelText" type="Label" parent="."]
margin_top = 152.0
margin_right = 192.0
margin_bottom = 215.0
custom_fonts/font = SubResource( 1 )
text = "Level: 1
Roll: 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="Label" parent="."]
margin_left = 608.0
margin_top = 8.0
margin_right = 859.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Warning! Put text here."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerTurn" type="Label" parent="."]
margin_left = 376.0
margin_top = 8.0
margin_right = 627.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 2 )
text = "Player 1's Turn!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Polygon2D" parent="."]
position = Vector2( -278.651, 370.428 )
scale = Vector2( 0.759454, 0.763394 )
color = Color( 0.156863, 0.156863, 0.156863, 1 )
polygon = PoolVector2Array( 371.443, 77.8848, 788.265, 80.6556, 788.265, 436.959, 366.909, 436.959 )

[node name="Dialogue" type="RichTextLabel" parent="DialogueBox"]
margin_left = 402.0
margin_top = 92.0
margin_right = 715.0
margin_bottom = 416.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="DialogueBox"]
wait_time = 0.01
autostart = true
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="EndTurn" to="." method="_on_EndTurn_pressed"]
[connection signal="pressed" from="RollDice" to="." method="_on_RollDice_pressed"]
[connection signal="pressed" from="ToggleDialogue" to="." method="toggleDialogueBox"]
[connection signal="pressed" from="AddMoney" to="." method="_on_AddMoney_pressed"]
[connection signal="pressed" from="SubtractMoney" to="." method="_on_SubtractMoney_pressed"]
[connection signal="pressed" from="SubtractYear" to="." method="_on_SubtractYear_pressed"]
[connection signal="pressed" from="AddYear" to="." method="_on_AddYear_pressed"]
[connection signal="timeout" from="DialogueBox/Timer" to="DialogueBox/Dialogue" method="_on_Timer_timeout"]
